# NOMAD

./: .clang-format  .git-commit-message.txt  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmessage.txt  ALL_WALKTHROUGHS.txt  AUDIO_CLIP_DRAG_DROP.md  BRANCHING_STRATEGY.md  BUILD.md  BUTTERY_SMOOTH_COMPLETE.md  BUTTERY_SMOOTH_ROADMAP.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_msdf_only.txt  CMakeLists_original.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DRAG_DROP_DEBUG.md  Doxyfile  Doxyfile.backup  FIXES.md  GIT_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-COMMERCIAL  LICENSING.md  NEXT-STEPS.md  NOMAD_AI_BRIEF.md  NOMAD_AUDIO_PIPELINE_AUDIT_REPORT.md  NOMAD_IMPROVEMENTS.md  NOMAD_PROJECT_ANALYSIS.md  NOTICE  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PLATFORM_ABSTRACTION_AUDIT_REPORT.md  PURPLE_THEME.md  README.md  SCROLLBAR_IMPROVEMENTS.md  (+40 more)
NomadAudio/: CMakeLists.txt  QUICK_REFERENCE.md  README.md  RTAUDIO_INTEGRATION.md  TASK_4.3_SUMMARY.md  TASK_4.4_SUMMARY.md  build_output.txt
NomadAudio/docs/: ASIO_INTEGRATION_EXAMPLE.cpp  AudioEngine Architecture implementation Plan.md  DRIVER_IMPLEMENTATION_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  MINIMAL_ASIO_STRATEGY.md  MULTI_DRIVER_ARCHITECTURE.md  PreviewEngine Design Specification.md
NomadAudio/include/: ASIODriverInfo.h  ArsenalUnit.h  AudioClip.h  AudioCommandQueue.h  AudioDeviceManager.h  AudioDriver.h  AudioDriverRegistry.h  AudioDriverTypes.h  AudioEngine.h  AudioFileValidator.h  AudioGraph.h  AudioGraphBuilder.h  AudioPlatformRegistry.h  AudioProcessor.h  AudioRT.h  AudioTelemetry.h  AutomationCurve.h  ChannelSlotMap.h  ClipInstance.h  ClipSource.h  ContinuousParamBuffer.h  DitherUtils.h  EngineState.h  Filter.h  IAudioDriver.h  Interpolators.h  MeterSnapshot.h  MiniAudioDecoder.h  MixerBus.h  MixerChannel.h  MultiClipPlaylist.h  NativeAudioDriver.h  NomadAudio.h  NomadUUID.h  OfflineRenderHarness.h  Oscillator.h  PathUtils.h  PatternManager.h  PatternPlaybackEngine.h  PatternSource.h  (+20 more)
NomadAudio/src/: ASIODriverInfo.cpp  AudioClip.cpp  AudioDeviceManager.cpp  AudioEngine.cpp  AudioGraphBuilder.cpp  AudioProcessor.cpp  ChannelSlotMap.cpp  ClipSource.cpp  Filter.cpp  MiniAudioDecoder.cpp  MixerBus.cpp  MixerChannel.cpp  NomadASIOBackend.cpp  NomadASIOBackend.h  Oscillator.cpp  PathUtils.cpp  PatternManager.cpp  PatternPlaybackEngine.cpp  PlaylistModel.cpp  PlaylistTrack.cpp  PreviewEngine.cpp  RtAudioBackend.cpp  RtAudioBackend.h  SamplePool.cpp  SampleRateConverter.cpp  SelectionModel.cpp  StreamingDecoder.cpp  TimelineClock.cpp  Track.cpp  TrackManager.cpp  UnitManager.cpp  WASAPIExclusiveDriver.cpp  WASAPISharedDriver.cpp  WaveformCache.cpp
NomadAudio/test/: AudioCallbackTest.cpp  AudioEngineSoakTest.cpp  AudioTest.cpp  DeviceManagerTest.cpp  FilterTest.cpp  InterpolationTimingTest.cpp  MixerBusTest.cpp  OscillatorTest.cpp  PerformanceStressTest.cpp  SampleRateConverterTest.cpp  SeekWhileStoppedTest.cpp  WavLoaderTest.cpp
NomadFramework/: CMakeLists.txt  Makefile  Makefile.simple  README.md  TEST_RESULTS.md  build.sh  simple_test  simple_test.cpp  test_framework.cpp
NomadFramework/examples/: NomadExample.cpp
NomadFramework/include/: JuceHeader.h  nomad.h
NomadFramework/src/: nomad.cpp
NomadFramework/tests/: CMakeLists.txt  TestAudioEngine.cpp  TestIntegration.cpp  TestMain.cpp  TestMidiEngine.cpp  TestParameterManager.cpp  TestTransport.cpp
NomadPlat/: CMakeLists.txt  README.md
NomadPlat/docs/: DPI_SUPPORT.md
NomadPlat/include/: NomadPlatform.h
NomadPlat/src/: Platform.cpp
NomadUI/: .gitignore  ARCHITECTURE.md  CHECKBOX_COLOR_IMPROVEMENTS.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  WIDGETS_QUICK_START.md  WIDGETS_SUMMARY.md  test_color_tinting.cpp  test_custom_svg_loading.cpp  test_icon_rendering.md
NomadUI/Common/: MusicHelpers.cpp  MusicHelpers.h
NomadUI/Config/: README.md  nomad_ui_config.yaml  slider_config.txt  slider_config.yaml  slider_tweaks.txt  titlebar_config.yaml
NomadUI/Core/: NUIAdaptiveFPS.cpp  NUIAdaptiveFPS.h  NUIAnimation.cpp  NUIAnimation.h  NUIApp.cpp  NUIApp.h  NUIButton.cpp  NUIButton.h  NUICheckbox.cpp  NUICheckbox.h  NUIComponent.cpp  NUIComponent.h  NUIConfigLoader.cpp  NUIConfigLoader.h  NUIContextMenu.cpp  NUIContextMenu.h  NUICustomTitleBar.cpp  NUICustomTitleBar.h  NUICustomWindow.cpp  NUICustomWindow.h  NUIDragDrop.cpp  NUIDragDrop.h  NUIDropdown.cpp  NUIDropdown.h  NUIDropdownContainer.cpp  NUIDropdownContainer.h  NUIDropdownManager.cpp  NUIDropdownManager.h  NUIFrameProfiler.cpp  NUIFrameProfiler.h  NUIIcon.cpp  NUIIcon.h  NUILabel.cpp  NUILabel.h  NUIProgressBar.cpp  NUIProgressBar.h  NUIScrollbar.cpp  NUIScrollbar.h  NUISlider.cpp  NUISlider.h  (+10 more)
NomadUI/Examples/: ButtonDemo.cpp  ButtonLabelDemo.cpp  CustomWindowDemo.cpp  FullScreenDemo.cpp  IconDemo.cpp  NewComponentsDemo.cpp  SimpleDemo.cpp  SimpleWindowTest.cpp  WidgetsDemo.cpp  WindowDemo.cpp
NomadUI/Graphics/: NUIFont.cpp  NUIFont.h  NUIRenderer.cpp  NUIRenderer.h  NUISVGCache.cpp  NUISVGCache.h  NUISVGParser.cpp  NUISVGParser.h  NUITextRenderer.cpp  NUITextRenderer.h  NUITextRendererGDI.cpp  NUITextRendererGDI.h  NUITextRendererModern.cpp  NUITextRendererModern.h  NUITextRendererSDF.cpp  NUITextRendererSDF.h  (+2 more)
Source/: ArsenalPanel.cpp  ArsenalPanel.h  ArsenalPanel_Playback.cpp  AudioSettingsDialog.cpp  AudioSettingsDialog.h  AudioVisualizer.cpp  AudioVisualizer.h  CMakeLists.txt  ConfirmationDialog.cpp  ConfirmationDialog.h  FPSDisplay.h  FileBrowser.cpp  FileBrowser.h  FileBrowser_BreadcrumbFix.cpp  FilePreviewPanel.cpp  FilePreviewPanel.h  Main.cpp  MainComponent.cpp  MainComponent.h  MixerMath.h  MixerPanel.cpp  MixerPanel.h  MixerView.cpp  MixerView.h  MixerViewModel.cpp  MixerViewModel.h  PatternBrowserPanel.cpp  PatternBrowserPanel.h  PerformanceHUD.cpp  PerformanceHUD.h  PianoRollPanel.cpp  PianoRollPanel.h  ProjectSerializer.cpp  ProjectSerializer.h  StepSequencerPanel.cpp  StepSequencerPanel.h  TimelineMinimapBar.cpp  TimelineMinimapBar.h  TimelineMinimapModel.h  TimelineMinimapRenderer.cpp  (+17 more)
src/: CMakeLists.txt  README.md  nomad.hpp
(+654 files in other folders)
